--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>this is new file generated and pushed in github</h1>
+    <h1>Updated File</h1>
 </body>
 </html>
